# PersonalToolBox

./: LICENSE  README.md  data_load_test.ipynb  load_test.py
config_files/: .pre-commit-config.yaml  cleaning_example.py  conftest.py  pyproject.toml  quality_checks.yaml  task_assignment.md
data_loader/: .gitignore  README.md  __init__.py  config.yaml  factory.py  pyproject.toml  requirements.txt
data_loader/base/: __init__.py  loader.py
data_loader/sources/: __init__.py  local.py
data_loader/tests/: __init__.py  test_local.py
data_loader/utils/: __init__.py  config_loader.py  file_finder.py  logger.py  validators.py
format_handler/: .gitignore  README.md  __init__.py  config.yaml  pyproject.toml  registry.py  requirements.txt
format_handler/base/: __init__.py  handler.py
format_handler/handlers/: __init__.py  csv_handler.py  custom_txt_handler.py  parquet_handler.py  sas7bdat_handler.py
format_handler/tests/: __init__.py  test_csv_handler.py  test_custom_txt_handler.py  test_parquet_handler.py  test_registry.py  test_sas7bdat_handler.py
format_handler/utils/: __init__.py  config_loader.py
