[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data-loader"
version = "0.1.0"
description = "A scalable Python module for importing data from various sources (currently supports local files)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["data", "loader", "etl", "pandas", "local-files"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Future optional dependencies (to be enabled when sources are implemented):
# github = [
#     "requests>=2.28.0",
#     "PyGithub>=1.59.0",
# ]
# sharepoint = [
#     "Office365-REST-Python-Client>=2.4.0",
#     "msal>=1.20.0",
# ]
# azure = [
#     "azure-storage-blob>=12.14.0",
#     "azure-identity>=1.12.0",
#     "azure-storage-file-datalake>=12.9.0",
# ]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
# all = [
#     "data-loader[github,sharepoint,azure,dev]",
# ]

[project.urls]
Homepage = "https://github.com/yourusername/DataProcessToolBox"
Documentation = "https://github.com/yourusername/DataProcessToolBox/blob/main/data_loader/README.md"
Repository = "https://github.com/yourusername/DataProcessToolBox"
Issues = "https://github.com/yourusername/DataProcessToolBox/issues"

[tool.setuptools]
packages = ["data_loader", "data_loader.base", "data_loader.sources", "data_loader.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

