[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "format-handler"
version = "0.1.0"
description = "A reusable Python module for parsing and handling various file formats"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["format", "parser", "csv", "excel", "json", "pandas", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]
parquet = [
    "pyarrow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "format-handler[excel,parquet,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/DataProcessToolBox"
Documentation = "https://github.com/yourusername/DataProcessToolBox/blob/main/format_handler/README.md"
Repository = "https://github.com/yourusername/DataProcessToolBox"
Issues = "https://github.com/yourusername/DataProcessToolBox/issues"

[tool.setuptools]
packages = ["format_handler", "format_handler.base", "format_handler.handlers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

